style.css
/* General formatting */
body {
	padding: 0 10px;
	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next",avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans",roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
	sans-serif;
}

h1, h2, h3 {
	line-height: 1.2
}

/* Narrow Column */
.content-column {
	max-width: 65%;
	margin: 40px auto;
}

.whole-holder {
	display: flex;
	flex-direction: row;
	width: 80%;
}

.vis-table-holder {
	display: flex;
	flex-direction: column;
	width: 50%;
}

.vis-holder {
	width: 50%;
	height: 50%;
}

.table-holder {
	width: 50%;
	height: 50%;
}

.pie-bar-holder {	
	display: flex;
	flex-direction: column;
	width: 50%;
}

.bar-holder {
	width: 50%;
	height: 50%;
}

.pie-holder {
	width: 50%;
	height: 50%;
}

.color_background {
    background-color: #FAFDAD;
    padding: 3px; 
}

.table,tr,td,th{
	border:1px solid black;
	border-collapse:collapse;
	vertical-align:middle;
	background:white;
}

